# telegram-proxy-bot

./: .env.template  .flake8  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
bot/: app.py  caching.py  configs.py  controllers.py  senders.py  sql.py
bot/tests/: conftest.py  test_automatic_replies.py  test_bans.py  test_callback_queries.py  test_configs.py  test_dependency_integration.py  test_proxying.py  test_storage_setup.py
bot/tests/test_utils/: telegram_requests.py
