[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-proxy-bot"
version = "2.0.0"
requires-python = ">=3.13"
dependencies = [
    "sanic>=25.12.0",
    "httpx>=0.28.1",
    "aiofiles>=25.1.0",
    "aiosqlite>=0.22.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "pytest-mock",
    "pytest-cov",
    "sanic-testing>=24.6.0",
    "flake8",
]

[tool.setuptools.packages.find]
include = ["bot*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
